test/fails/bad_casts/core1.lgl
tag coord a is vec<2>;
tag coord b is a; // Can't have a coord be a subtype of another coord

void main() {
    print 1;
}